Solve the problem of the infobar overlapping on the filters box by merging them together.

--- a/app/assets/stylesheets/_search.css.scss
+++ b/app/assets/stylesheets/_search.css.scss
@@ -4,7 +4,7 @@
   margin-top: 0;
   background: #858585;
   color: #fff;
-  width: 125px;
+  min-width: 125px;
   //float: left;
   padding: 10px;
   border-radius: 0 5px 5px 0;
