--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,17 +15,17 @@
 
 #infobar { 
   display: none;
-  margin-top: 60px;
   width: 300px; 
   height: 250px;
   overflow-y: auto;
-  position: absolute;
 
+  background: #fff;
   border-right: 3px solid #7f7f7f;
   border-top: 3px solid #7f7f7f;
   border-bottom: 3px solid #7f7f7f;
-  border-radius: 0 10px 10px 0;
+  //border-radius: 10px;
   padding: 5px;
+  color: #444;
 
   h2 {
     font-size: 18px;
